fixing mobile view

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mr. Bananaaa</title>
     <!-- <link rel="stylesheet" href="/src/index.css" /> -->
   </head>
-  <body class="bg-background-light">
+  <body class="max-w-svw overflow-x-hidden bg-background-light">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
