--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo-dark.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mr. Bananaaa</title>
+    <title>Hi!👋</title>
     <!-- <link rel="stylesheet" href="/src/index.css" /> -->
   </head>
   <body class="max-w-svw overflow-x-hidden bg-background-light">
