--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo-dark.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hi!👋</title>
+    <title>Welcome to my porto!👋</title>
     <!-- <link rel="stylesheet" href="/src/index.css" /> -->
   </head>
   <body class="max-w-svw overflow-x-hidden bg-background-light">
